<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:background="@color/white"
    android:layout_height="match_parent">


    <com.seetaoism.widgets.MatchScrollParentCLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_edt_phone_number"
            style="@style/SeeWay.EditInput"
            android:hint="@string/text_phone_number"
            android:inputType="number|phone"
            android:maxLength="11"
            app:layout_constraintBottom_toTopOf="@id/login_iv_line1" />

        <ImageView
            android:visibility="invisible"
            android:id="@+id/login_iv_clean_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/login_edt_phone_number"
            app:layout_constraintEnd_toEndOf="@+id/login_edt_phone_number"
            app:layout_constraintTop_toTopOf="@+id/login_edt_phone_number"
            app:srcCompat="@drawable/ic_clean" />

        <EditText
            android:id="@+id/login_edt_verify"
            style="@style/SeeWay.EditInput"
            android:hint="@string/text_input_sms_code"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@id/login_iv_line2"
            />

        <TextView
            android:textColor="@color/gray_1"
            android:id="@+id/login_tv_getverify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:text="@string/text_register_get_code"
            app:layout_constraintBottom_toBottomOf="@+id/login_edt_verify"
            app:layout_constraintEnd_toEndOf="@+id/login_edt_verify"
            app:layout_constraintTop_toTopOf="@+id/login_edt_verify"/>

        <Button
            android:enabled="false"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/login_button_rounder_bg_selector"
            android:text="@string/text_login"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/login_iv_show_password"
            app:layout_constraintStart_toStartOf="@+id/login_edt_password"
            app:layout_constraintTop_toBottomOf="@+id/login_iv_line2" />

        <ImageView
            android:id="@+id/login_iv_line1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="218dp"
            android:layout_marginEnd="43dp"
            android:background="@color/gray_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/login_iv_line2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="55dp"
            android:background="@color/gray_3"
            app:layout_constraintEnd_toEndOf="@+id/login_iv_line1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/login_iv_line1"
            app:layout_constraintTop_toBottomOf="@id/login_iv_line1"
            tools:layout_editor_absoluteY="300dp" />

        <TextView
            android:id="@+id/login_goto_ps_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/text_pwd_login"
            android:textColor="@color/gray_6"
            android:textSize="12dp"
            app:layout_constraintStart_toStartOf="@+id/login_btn_login"
            app:layout_constraintTop_toBottomOf="@+id/login_btn_login"/>

        <TextView
            android:id="@+id/login_tv_goto_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_register_immediately"
            android:textColor="@color/gray_6"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="@+id/login_btn_login"
            app:layout_constraintTop_toTopOf="@+id/login_goto_ps_login" />


        <ImageView
            android:id="@+id/anchor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/login_tv_goto_register" />

        <include layout="@layout/part_layout_user_common" />


    </com.seetaoism.widgets.MatchScrollParentCLayout>
</ScrollView>